--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -170,7 +170,9 @@ backend deepfence-rest-proxy-8082
     http-request deny unless { var(txn.authorized) eq "true" } || { var(txn.authorized) eq "not_enabled" }
     # remove leading /ingest from url
     http-request replace-path /ingest(.*) \1
-    server s1 deepfence-rest-proxy:8082
+    acl is_default_customer_id str("${CUSTOMER_UNIQUE_ID}") -m len 0
+    http-request set-path %[path]-"${CUSTOMER_UNIQUE_ID}" if !is_default_customer_id
+    server s1 ${KAFKA_REST_PROXY}
 
 backend options_method_handler
     mode http
