update haproxy log format to match clf

--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -19,8 +19,11 @@ defaults
     timeout server 60s
     timeout client 60s
     option dontlognull
-    option httplog
+    # option httplog
     log global
+    # CLF log format
+    # https://www.haproxy.com/blog/haproxy-log-customization/
+    log-format "%{+Q}o %{-Q}ci - - [%trg] %r %ST %B %cp %ft %b %s %TR %Tw %Tc %Tr %Ta %fc %bc %sc %rc %sq %bq"
 
 frontend port_80
     mode http
