change haproxy log path to /var/log/haproxy/*

--- a/deepfence_backend/dockerify/haproxy/rsyslog.conf
+++ b/deepfence_backend/dockerify/haproxy/rsyslog.conf
@@ -1,3 +1,6 @@
+$template noTimestampFormat,"%msg%\n"
+$ActionFileDefaultTemplate noTimestampFormat
+
 # Loads the imudp into rsyslog address space
 # and activates it.
 # IMUDP provides the ability to receive syslog
@@ -15,7 +18,7 @@ $UDPServerRun 514
 # local0 facility (which we reference in the haproxy
 # configuration) and send to the haproxy.log 
 # file.
-local0.* -/var/log/haproxy.log
+local0.* -/var/log/haproxy/haproxy.log
 
 # Discard the rest
 & ~
