Changed Name of resolver on haproxy.cfg from kubernetes to df-resolver

--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -20,7 +20,7 @@ defaults
     timeout client 60s
     option dontlognull
 
-resolvers kubernetes
+resolvers df-resolver
   parse-resolv-conf 
   hold valid 10s
 
