--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -57,7 +57,7 @@ frontend port_443
 
 backend deepfence-ui-4042
     mode http
-    server s1 ${UI_SERVICE_NAME}:4042 resolvers kubernetes
+    server s1 ${UI_SERVICE_NAME}:4042 resolvers df-resolver
 
 backend deepfence-api-9998
     mode http
