Upgrade elasticsearch version #450

--- a/deepfence_console/elasticsearch.yml
+++ b/deepfence_console/elasticsearch.yml
@@ -8,3 +8,5 @@ network.host: 0.0.0.0
 # Details: https://github.com/elastic/elasticsearch/pull/17288
 discovery.zen.minimum_master_nodes: 1
 # node.roles: ["master", "data", "ingest"]
+
+xpack.ml.enabled: false
