--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = deepfence_agent/plugins/SecretScanner
 	url = https://github.com/deepfence/SecretScanner
 	branch = master
+[submodule "deepfence_agent/plugins/compliance"]
+	path = deepfence_agent/plugins/compliance
+	url = https://github.com/deepfence/compliance
+	branch = saurabh-dev
