--- a/deepfence_ui/package.json
+++ b/deepfence_ui/package.json
@@ -11,6 +11,7 @@
     "@antv/g2plot": "^2.3.33",
     "@antv/g6": "^4.3.3",
     "@babel/helper-module-imports": "^7.0.0",
+    "@reach/portal": "^0.17.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.1",
     "d3-format": "^1.3.2",
