--- a/deepfence_ui/package.json
+++ b/deepfence_ui/package.json
@@ -13,6 +13,7 @@
     "@antv/g6": "^4.6.15",
     "@babel/helper-module-imports": "^7.0.0",
     "@reach/dialog": "^0.17.0",
+    "@react-spring/web": "^9.5.2",
     "@tippyjs/react": "^4.2.6",
     "antd": "^4.21.5",
     "classnames": "^2.3.1",
