--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -29,13 +29,14 @@ RUN export LD_LIBRARY_PATH="/usr/local/lib:$LD_LIBRARY_PATH" \
     && mkdir -p /etc/license/ /usr/local/bin /usr/local/lib \
         /deepfenced /var/tmp/layers /usr/local/lua-waf /var/log/nginx/ \
     && chown root:root /deepfenced && chmod 0744 /deepfenced \
-    && mkdir /usr/local/discovery
+    && mkdir /usr/local/bin/compliance_check && mkdir /usr/local/discovery
 COPY misc/deepfence/df-utils/agent_auth/agentAuth /usr/local/bin/agentAuth
 COPY misc/deepfence/df-utils/get_cloud_instance_id/getCloudInstanceId /usr/local/bin/getCloudInstanceId
 COPY etc/fenced_logrotate.conf /etc/logrotate.d/fenced_logrotate.conf
 COPY etc/certs/* /etc/filebeat/
 COPY start_serverless_services.sh /usr/local/bin/start_services
 COPY tools/apache/scope/docker/deepfence_exe /usr/local/discovery/deepfence-discovery
+COPY tools/apache/compliance_check /usr/local/bin/compliance_check
 COPY plugins/compliance/scripts /usr/local/bin/compliance_check/scripts
 COPY plugins/compliance/config.json /usr/local/bin/compliance_check/config.json
 COPY plugins/docker_bin/compliance /usr/local/bin/compliance_check/compliance
@@ -47,7 +48,9 @@ COPY plugins/docker_bin /home/deepfence/bin
 
 COPY --from=build /usr/local/bin/syft /usr/local/bin/syft
 
-RUN chmod 700 /usr/local/bin/agentAuth /usr/local/bin/getCloudInstanceId \
+RUN chmod +x /usr/local/bin/compliance_check/*.sh \
+    && rm /usr/local/bin/compliance_check/*.go \
+    && chmod 700 /usr/local/bin/agentAuth /usr/local/bin/getCloudInstanceId \
     && chmod 700 /usr/local/discovery/deepfence-discovery /home/deepfence/run_discovery.sh \
     && chmod +x /home/deepfence/*.sh \
     && cd /tmp \
