--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -20,9 +20,6 @@ defaults
     timeout client 60s
     option dontlognull
 
-resolvers df-resolver
-  parse-resolv-conf 
-  hold valid 10s
 
 frontend port_80
     mode http
@@ -57,7 +54,7 @@ frontend port_443
 
 backend deepfence-ui-4042
     mode http
-    server s1 ${UI_SERVICE_NAME}:4042 resolvers df-resolver
+    server s1 ${UI_SERVICE_NAME}:4042
 
 backend deepfence-api-9998
     mode http
